[package]
edition = "2021"
name = "minesweeprs"
version = "0.1.0"

authors = ["starwort", "mrgriscom <mrgriscom@gmail.com>"]
description = "Probabalistic minesweeper solver, based on https://mrgris.com/projects/minesweepr/"
homepage = "https://github.com/starwort/minesweeprs"
license = "Apache-2.0"
repository = "https://github.com/starwort/minesweeprs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.8.0"
itertools = "0.10.5"
